Added a bunch of stuff

--- a/roles/cluster_monitoring/templates/vars.jsonnet.j2
+++ b/roles/cluster_monitoring/templates/vars.jsonnet.j2
@@ -26,6 +26,11 @@
       file: import 'modules/metallb.jsonnet',
     },
     {
+      name: 'nginxExporter',
+      enabled: false,
+      file: import 'modules/nginx.jsonnet',
+    },
+    {
       name: 'traefikExporter',
       enabled: false,
       file: import 'modules/traefik.jsonnet',
@@ -38,7 +43,7 @@
   ],
 
   k3s: {
-    enabled: true,
+    enabled: false,
     master_ip: ['{{ groups['master'][0] }}'],
   },
 
@@ -52,14 +57,34 @@
   TLSCertificate: importstr 'server.crt',
   TLSKey: importstr 'server.key',
 
-  // Setting these to false, defaults to emptyDirs
+  // Persistent volume configuration
   enablePersistence: {
+    // Setting these to false, defaults to emptyDirs.
     prometheus: false,
     grafana: false,
+    // If using a pre-created PV, fill in the names below. If blank, they will use the default StorageClass
+    prometheusPV: '',
+    grafanaPV: '',
+    // If required to use a specific storageClass, keep the PV names above blank and fill the storageClass name below.
+    storageClass: '',
+    // Define the PV sizes below
+    prometheusSizePV: '2Gi',
+    grafanaSizePV: '20Gi',
   },
 
-  // Grafana "from" email
+  // Configuration for Prometheus deployment
+  prometheus: {
+    retention: '15d',
+    scrapeInterval: '30s',
+    scrapeTimeout: '30s',
+  },
   grafana: {
-    from_address: '{{ grafana_from_email }}',
+    // Grafana "from" email
+    from_address: 'ncwilde43@gmail.com',
+    // Plugins to be installed at runtime.
+    plugins: ['grafana-piechart-panel', 'grafana-clock-panel'],
+    //plugins: [],
+    //Ex. env: [ { name: 'http_proxy', value: 'host:8080' } ]
+    env: []
   },
 }
