--- a/roles/cluster_monitoring/templates/vars.jsonnet.j2
+++ b/roles/cluster_monitoring/templates/vars.jsonnet.j2
@@ -1,6 +1,6 @@
 {
   _config+:: {
-    namespace: 'monitoring',
+    namespace: '{{ monitoring_namespace }}',
   },
   // Enable or disable additional modules
   modules: [
